<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_round_bg"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:ignore="SpUsage" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_round_ani_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/edit_text_view_cancel"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/btnCancel"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/edit_image_view_header"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_trans" />

    <Button
        android:id="@+id/btnChoosePhoto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_round_ani_bg"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/edit_image_view_choose_photo"
        android:textColor="@color/black"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/item_round_ani_bg"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/edit_image_view_take_photo"
        android:textColor="@color/black"
        android:textSize="14dp" />

</LinearLayout>