<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="th.co.shiftright.mobile.wheelions.MainActivity"
    tools:ignore="ContentDescription,UselessParent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgAppLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:adjustViewBounds="true"
                android:background="@drawable/item_gray_rectangle_bg"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/lblAppName"
                style="@style/text_single_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="@dimen/normal_text_font_size" />

            <TextView
                android:id="@+id/lblLoginInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/login_instruction"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:textSize="@dimen/normal_text_font_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblDrivingNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/driving_no"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/small_text_font_size" />

                <EditText
                    android:id="@+id/txtDrivingNo"
                    android:layout_width="@dimen/login_view_item_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lblPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:singleLine="false"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/small_text_font_size" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="@dimen/login_view_item_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_font_size" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/login_view_item_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/item_white_rectangle_ani_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_font_size" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>