<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@null"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:ignore="ContentDescription,UselessParent,ButtonStyle" >

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_round_bg"
        android:paddingBottom="20dp" >

        <RelativeLayout
            android:id="@+id/top_head_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <TextView
                android:id="@+id/title_dialog"
                style="@style/text_single_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/report_status_dialog"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text_font_size" />

            <ImageButton
                android:id="@+id/btn_close_dialog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/bt_close" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_head_dialog"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Spinner
                android:id="@+id/snStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/item_white_rectangle_ani_bg"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/report_status_dialog_cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_font_size" />

                <Button
                    android:id="@+id/btnReport"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/item_white_rectangle_ani_bg"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/report_status_dialog_submit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_font_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>